--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: art to the world.
 description: art to the world.
-featured_image: /images/sunyellow_main.jpg
+featured_image: /images/touchofgrey_main.jpg
 ---
 
 <section class="portfolio">
